# discord-prayer-bot

./: .env.example  .gitattributes  .gitignore  AGENTS.md  BOT_BEHAVIOR.md  CHANGELOG.md  Dockerfile  Makefile  PR_DESCRIPTION.md  README.md  USER_REQUIREMENTS.md  agents.md  bot_status_method.py  cypress.config.js  docker-compose.yml  plan.md  pyproject.toml  repomix-output.xml  requirements.txt  verification.md
agents/: content_agent.md  devops_agent.md  pm_agent.md  qa_agent.md  security_agent.md
bot/: apply_server.py  client.py  main.py  player_framework.py  player_framework_integrated.py  prayer_scheduler.py  state_framework.py
cypress/e2e/: admin-schedule.cy.js  history.cy.js  landing.cy.js  login.cy.js  navigation.cy.js  public-schedule.cy.js  servers.cy.js
cypress/support/: e2e.js
dashboard/: app.py  auth.py  commands.py  prayers_routes.py
dashboard/templates/: base.html  history.html  landing.html  prayers_admin.html  prayers_public.html  servers.html
db/: database.py  guilds.py  models.py  prayers.py
docs/: user_stories.md
scripts/: download_prayers.sh
tests/: test_apply_server.py  test_dashboard_multi_guild.py  test_dashboard_routes.py  test_db.py  test_db_timezones.py  test_routes.py  test_scheduler.py  test_timezone_conversion.py
