[project]
name = "discord-prayer-bot"
version = "0.1.0"
description = "A Discord bot that plays scheduled prayer audio."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
# Target Python version
target-version = "py311"
# Line length
line-length = 100

[tool.ruff.lint]
# Enable specific rule sets
# E: pycodestyle errors
# F: Pyflakes
# I: isort
# UP: pyupgrade
# B: flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["bot", "db", "dashboard", "provider"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
